working fruit demo

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "queue-async": "^1.0.7",
+    "sprintf": "^0.1.5",
     "tile-cover": "^3.0.0",
     "tile-reduce": "^2.0.0",
     "turf": "^2.0.2"
